--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
+    "firebaseui": "^6.0.2",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "react": "18.2.0",
