--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "emu:dev": "cross-env NEXT_PUBLIC_FIREBASE_EMULATOR=true next dev",
-    "emu:start": "firebase emulators:start --import=./emu-data --export-on-exit"
+    "emu:start": "firebase emulators:start --import=./emu-data --export-on-exit",
+    "plop": "plop  --plopfile ./generators/plopfile.mjs"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.4",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/uuid": "^9.0.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "plop": "^3.1.2"
   }
 }
