--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "server-only": "^0.0.1",
     "typescript": "5.1.3",
     "uuid": "^9.0.0"
